<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dns.project_3.ui.activity.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/stark"
        app:border_width="2dp"
        app:border_color="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/fio_img"
                app:srcCompat="@drawable/fio_img"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fio"
                android:id="@+id/fio_value"
                android:layout_weight="4"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:inputType="text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/nickname"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:id="@+id/nickname_value"
                android:layout_weight="4"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/dept_img"
                app:srcCompat="@drawable/dept_img"
                android:layout_gravity="center"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dept_spiner"
                android:layout_weight="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/sex_img"
                app:srcCompat="@drawable/sex_img"
                android:layout_gravity="center" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sex_spiner"
                android:gravity="fill"
                android:layout_weight="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/statys_img"
                app:srcCompat="@drawable/statys_img"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/statys"
                android:id="@+id/statys_value"
                android:layout_weight="4"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:inputType="text"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
